# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/distributeddatamgr/data_share/datashare.gni")

group("unittest") {
  testonly = true
  deps = []

  deps += [
    ":AbnormalBranchTest",
    ":ControllerTest",
    ":ErrorCodeTest",
    ":JoinTest",
    ":NativeDataShareTest",
    ":PermissionTest",
    ":ProxyDatasTest",
    ":SlientAccessTest",
    ":SlientSwitchTest",
    ":ValueProxyTest",
    "resource/datashare_ext_bundle:datashare_ext",
    "resource/datashareproxy_bundle/proxydatas_with_permission:proxydatas_with_permission",
    "resource/errorcode_ext_bundle:errorcode_ext",
    "resource/ohos_test:copy_ohos_test",
  ]
}

config("permission_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "${datashare_common_native_path}/include",
    "${datashare_native_permission_path}/include",
  ]

  cflags = []
  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }
}

ohos_unittest("NativeDataShareTest") {
  module_out_path = "data_share/native_datashare"

  include_dirs = [
    "//foundation/ability/ability_runtime/interfaces/inner_api/ability_manager/include",
    "//foundation/ability/ability_runtime/interfaces/inner_api/app_manager/include/appmgr",
    "//foundation/ability/ability_runtime/interfaces/inner_api/dataobs_manager/include",
    "//foundation/ability/ability_runtime/interfaces/kits/native/ability/native",
    "./unittest/mediadatashare_test/include",
    "//base/security/access_token/frameworks/common/include",
    "//base/hiviewdfx/hilog/interfaces/native/innerkits/include",
    "//foundation/aafwk/standard/interfaces/innerkits/uri/include",
    "//commonlibrary/c_utils/base/include",
    "//utils/system/safwk/native/include",
    "//foundation/communication/ipc/interfaces/innerkits/ipc_core/include",
    "//third_party/json/include",
  ]

  sources =
      [ "./unittest/mediadatashare_test/src/mediadatashare_unit_test.cpp" ]

  deps = [
    "${datashare_innerapi_path}:datashare_consumer",
    "${datashare_innerapi_path}/common:datashare_common",
  ]

  external_deps = [
    "ability_base:want",
    "ability_base:zuri",
    "ability_runtime:ability_manager",
    "ability_runtime:abilitykit_native",
    "ability_runtime:dataobs_manager",
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "hilog:libhilog",
    "hitrace:hitrace_meter",
    "ipc:ipc_single",
    "relational_store:rdb_data_ability_adapter",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]
}

ohos_unittest("PermissionTest") {
  module_out_path = "data_share/native_datashare"

  include_dirs = [
    "${access_token_path}/frameworks/common/include",
    "${base_hiviewdfx_hilog_path}/interfaces/native/innerkits/include",
    "${commonlibrary_cutils_path}/base/include",
    "${foundation_path}/aafwk/standard/interfaces/innerkits/uri/include",
    "${foundation_path}/communication/ipc/interfaces/innerkits/ipc_core/include",
    "${utils_system_safwk_path}/native/include",
  ]

  sources = [ "./unittest/mediadatashare_test/src/permission_test.cpp" ]
  configs = [ ":permission_config" ]

  deps = [
    "${datashare_innerapi_path}:datashare_permission",
    "${datashare_innerapi_path}/common:datashare_common",
  ]

  external_deps = [
    "ability_base:want",
    "ability_base:zuri",
    "ability_runtime:ability_manager",
    "ability_runtime:abilitykit_native",
    "ability_runtime:dataobs_manager",
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "hilog:libhilog",
    "ipc:ipc_single",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]
}

ohos_unittest("SlientAccessTest") {
  module_out_path = "data_share/native_datashare"

  include_dirs = [
    "//base/security/access_token/frameworks/common/include",
    "//base/hiviewdfx/hilog/interfaces/native/innerkits/include",
    "//foundation/aafwk/standard/interfaces/innerkits/uri/include",
    "//commonlibrary/c_utils/base/include",
    "//utils/system/safwk/native/include",
    "//foundation/communication/ipc/interfaces/innerkits/ipc_core/include",
  ]

  sources = [ "./unittest/mediadatashare_test/src/slientaccess_test.cpp" ]

  deps = [
    "${datashare_innerapi_path}:datashare_consumer",
    "${datashare_innerapi_path}/common:datashare_common",
  ]

  external_deps = [
    "ability_base:want",
    "ability_base:zuri",
    "ability_runtime:ability_manager",
    "ability_runtime:abilitykit_native",
    "ability_runtime:dataobs_manager",
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "hilog:libhilog",
    "ipc:ipc_single",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]
}

ohos_unittest("SlientSwitchTest") {
  module_out_path = "data_share/native_datashare"

  sources = [ "./unittest/mediadatashare_test/src/slientswitch_test.cpp" ]

  deps = [
    "${datashare_innerapi_path}:datashare_consumer",
    "${datashare_innerapi_path}/common:datashare_common",
  ]

  external_deps = [
    "ability_base:want",
    "ability_base:zuri",
    "ability_runtime:ability_manager",
    "ability_runtime:abilitykit_native",
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "hilog:libhilog",
    "ipc:ipc_single",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]
}

ohos_unittest("ErrorCodeTest") {
  module_out_path = "data_share/native_datashare"

  include_dirs = [
    "//base/security/access_token/frameworks/common/include",
    "//base/hiviewdfx/hilog/interfaces/native/innerkits/include",
    "//foundation/aafwk/standard/interfaces/innerkits/uri/include",
    "//commonlibrary/c_utils/base/include",
    "//utils/system/safwk/native/include",
    "//foundation/communication/ipc/interfaces/innerkits/ipc_core/include",
  ]

  sources = [ "./unittest/mediadatashare_test/src/errorcode_test.cpp" ]

  deps = [
    "${datashare_innerapi_path}:datashare_consumer",
    "${datashare_innerapi_path}/common:datashare_common",
  ]

  external_deps = [
    "ability_base:want",
    "ability_base:zuri",
    "ability_runtime:ability_manager",
    "ability_runtime:abilitykit_native",
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "hilog:libhilog",
    "ipc:ipc_single",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]
}

ohos_unittest("JoinTest") {
  module_out_path = "data_share/native_datashare"

  include_dirs = [
    "//base/security/access_token/frameworks/common/include",
    "//base/hiviewdfx/hilog/interfaces/native/innerkits/include",
    "//foundation/aafwk/standard/interfaces/innerkits/uri/include",
    "//commonlibrary/c_utils/base/include",
    "//utils/system/safwk/native/include",
    "//foundation/communication/ipc/interfaces/innerkits/ipc_core/include",
  ]

  sources = [ "./unittest/mediadatashare_test/src/join_test.cpp" ]

  deps = [
    "${datashare_innerapi_path}:datashare_consumer",
    "${datashare_innerapi_path}/common:datashare_common",
  ]

  external_deps = [
    "ability_base:want",
    "ability_base:zuri",
    "ability_runtime:ability_manager",
    "ability_runtime:abilitykit_native",
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "hilog:libhilog",
    "ipc:ipc_single",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]
}

ohos_unittest("ProxyDatasTest") {
  module_out_path = "data_share/native_datashare"

  include_dirs = [
    "//base/security/access_token/frameworks/common/include",
    "//base/hiviewdfx/hilog/interfaces/native/innerkits/include",
    "//foundation/aafwk/standard/interfaces/innerkits/uri/include",
    "//commonlibrary/c_utils/base/include",
    "//utils/system/safwk/native/include",
    "//foundation/communication/ipc/interfaces/innerkits/ipc_core/include",
  ]

  sources =
      [ "./unittest/datashareproxy_test/proxydatas_with_permission_test.cpp" ]

  deps = [
    "${datashare_innerapi_path}:datashare_consumer",
    "${datashare_innerapi_path}/common:datashare_common",
  ]

  external_deps = [
    "ability_base:want",
    "ability_base:zuri",
    "ability_runtime:ability_manager",
    "ability_runtime:abilitykit_native",
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_single",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]
}

ohos_unittest("ControllerTest") {
  module_out_path = "data_share/native_datashare"

  include_dirs = [
    "${ability_runtime_inner_api_path}/ability_manager/include",
    "${ability_runtime_inner_api_path}/app_manager/include/appmgr",
    "${ability_runtime_inner_api_path}/dataobs_manager/include",
    "${ability_runtime_path}/interfaces/kits/native/ability/native",
    "${access_token_path}/frameworks/common/include",
    "${base_hiviewdfx_hilog_path}/interfaces/native/innerkits/include",
    "${foundation_path}/aafwk/standard/interfaces/innerkits/uri/include",
    "${commonlibrary_cutils_path}/base/include",
    "${utils_system_safwk_path}/native/include",
    "${foundation_path}/communication/ipc/interfaces/innerkits/ipc_core/include",
    "${thirdparty_json_path}/include",
    "${datashare_innerapi_path}/consumer/include",
    "${datashare_native_consumer_path}/controller/common",
    "${datashare_native_consumer_path}/controller/provider/include",
    "${datashare_native_consumer_path}/controller/service/include",
    "${datashare_native_consumer_path}/include",
    "${datashare_innerapi_path}/common/include",
    "${datashare_native_proxy_path}/include",
    "${ability_runtime_inner_api_path}/extension_manager/include/",
  ]

  sources = [ "./unittest/mediadatashare_test/src/controller_test.cpp" ]

  deps = [
    "${datashare_innerapi_path}:datashare_consumer_static",
    "${datashare_innerapi_path}/common:datashare_common_static",
  ]

  external_deps = [
    "ability_base:want",
    "ability_base:zuri",
    "ability_runtime:ability_manager",
    "ability_runtime:abilitykit_native",
    "ability_runtime:dataobs_manager",
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "hilog:libhilog",
    "hitrace:hitrace_meter",
    "ipc:ipc_single",
    "relational_store:rdb_data_ability_adapter",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]
}

ohos_unittest("AbnormalBranchTest") {
  module_out_path = "data_share/native_datashare"

  include_dirs = [
    "${access_token_path}/frameworks/common/include",
    "${base_hiviewdfx_hilog_path}/interfaces/native/innerkits/include",
    "${foundation_path}/aafwk/standard/interfaces/innerkits/uri/include",
    "${commonlibrary_cutils_path}/base/include",
    "${utils_system_safwk_path}/native/include",
    "${foundation_path}/communication/ipc/interfaces/innerkits/ipc_core/include",
    "//foundation/distributeddatamgr/data_share/frameworks/native/proxy/include/",
    "//foundation/distributeddatamgr/data_share/frameworks/native/common/include/",
  ]

  sources = [ "./unittest/mediadatashare_test/src/abnormal_branch_test.cpp" ]

  deps = [
    "${datashare_innerapi_path}:datashare_consumer_static",
    "${datashare_innerapi_path}/common:datashare_common_static",
  ]

  external_deps = [
    "ability_base:want",
    "ability_base:zuri",
    "ability_runtime:ability_manager",
    "ability_runtime:abilitykit_native",
    "ability_runtime:dataobs_manager",
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "hilog:libhilog",
    "hitrace:hitrace_meter",
    "ipc:ipc_single",
    "relational_store:rdb_data_ability_adapter",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]
}

ohos_unittest("ValueProxyTest") {
  module_out_path = "data_share/native_datashare"

  include_dirs = [
    "${datashare_base_path}/frameworks/native/common/include/",
    "${kvstore_base_path}/frameworks/common",
  ]

  sources = [ "./unittest/mediadatashare_test/src/valueproxy_test.cpp" ]

  deps = [ "${datashare_innerapi_path}/common:datashare_common_static" ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_single",
  ]
}
