# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/components/ets_frontend/ets2abc_config.gni")
import("//build/ohos.gni")
import("//foundation/distributeddatamgr/data_share/datashare.gni")

ohos_shared_library("data_share_predicates") {
  sanitize = {
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  sources = [ "./src/data_share_predicates.cpp" ]
  include_dirs = [ "include" ]
  deps = [ "${datashare_innerapi_path}/common:datashare_common" ]
  external_deps = [ "runtime_core:ani" ]
  subsystem_name = "distributeddatamgr"
  part_name = "data_share"
  output_extension = "so"
}

generate_static_abc("data_share_predicates_abc") {
  arktsconfig = "./arktsconfig.json"
  dst_file = "$target_out_dir/data_share_predicates.abc"
  out_puts = [ "$target_out_dir/data_share_predicates.abc" ]
  is_boot_abc = "True"
  device_dst_file = "/system/framework/data_share_predicates.abc"
}

ohos_prebuilt_etc("data_share_predicates_abc_etc") {
  source = "$target_out_dir/data_share_predicates.abc"
  module_install_dir = "framework"
  subsystem_name = "distributeddatamgr"
  part_name = "data_share"
  deps = [ ":data_share_predicates_abc" ]
}

group("ani_data_share_predicates") {
  deps = [
    ":data_share_predicates",
    ":data_share_predicates_abc_etc",
  ]
}
