# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "datashare_ffi"
version = "1.0.0"
edition = "2021"
description = "Unified C FFI entry point for all DataShare Rust libraries"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
datashare_common = { path = "../datashare_common_rust" }
datashare_resultset = { path = "../datashare_resultset_rust" }
datashare_consumer_rust = { path = "../datashare_consumer_rust" }
datashare_permission_rust = { path = "../datashare_permission_rust" }
datashare_provider_rust = { path = "../datashare_provider_rust" }
